Fixed issue with parts of the icons being cut off in Post and PostPage components.

--- a/client/src/components/post/post.css
+++ b/client/src/components/post/post.css
@@ -124,15 +124,10 @@
 
 .like-comment-share-icons {
   font-size: 1.25rem;
-  border-radius: 50%;
-  padding: 0.5rem;
-  cursor: pointer;
-  transition: 0.1s;
-  box-sizing: content-box;
 }
 
 @media (hover: hover) and (pointer: fine) {
-  .like-comment-share-icons:hover {
+  .post .btn-wrapper:hover {
     color: #1d9bf0;
     background-color: rgba(29, 155, 240, 0.1);
   }
@@ -157,6 +152,13 @@
 
 .post .liked .like-comment-share-icons {
   color: #1d9bf0;
-  /* background-color: #1d9bf0; */
   font-variation-settings: "FILL" 1;
+}
+
+.post .btn-wrapper {
+  display: flex;
+  padding: 0.5rem;
+  border-radius: 50%;
+  cursor: pointer;
+  transition: 0.1s;
 }
